工程中静态文件的获取

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.0.4.RELEASE'
     compile group: 'org.webjars', name: 'angularjs', version: '2.0.0-alpha.22'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.1.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.1.RELEASE'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 }
