--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,27 @@
 server.port=8080
-spring.mvc.view.prefix=static/
-spring.mvc.view.suffix=.html
 spring.datasource.url=jdbc:postgresql://localhost:5432/shterm
 spring.datasource.username=shterm
 spring.datasource.password=shterm
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Enable template caching.
+spring.thymeleaf.cache=true 
+# Check that the templates location exists.
+spring.thymeleaf.check-template-location=true 
+# Content-Type value.
+spring.thymeleaf.servlet.content-type=text/html 
+# Enable MVC Thymeleaf view resolution.
+spring.thymeleaf.enabled=true 
+# Template encoding.
+spring.thymeleaf.encoding=UTF-8
+# Comma-separated list of view names that should be excluded from resolution.
+spring.thymeleaf.excluded-view-names=
+# Template mode to be applied to templates. See also StandardTemplateModeHandlers.
+spring.thymeleaf.mode=HTML5 
+# Prefix that gets prepended to view names when building a URL.
+spring.thymeleaf.prefix=classpath:/templates/ 
+# Suffix that gets appended to view names when building a URL.
+spring.thymeleaf.suffix=.html
+#spring.thymeleaf.template-resolver-order= # Order of the template resolver in the chain. spring.thymeleaf.view-names= # Comma-separated list of view names that can be resolved.
